eks-demo-ui/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-demo-backend
  labels:
    app: eks-demo-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eks-demo-backend
  template:
    metadata:
      labels:
        app: eks-demo-backend
    spec:
      containers:
        - name: backend
          image: 481665100297.dkr.ecr.us-east-1.amazonaws.com/eks-demo-backend:latest
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: eks-demo-backend-svc
spec:
  type: ClusterIP
  selector:
    app: eks-demo-backend
  ports:
    - port: 80
      targetPort: 3001
